--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ repository: Git repository where your resume will be hosted, only required if yo
 version: 2
 
 # Personal info
-name: ZL XIA
+name: 夏子雷
 title: Full Stack Engineer
 email: xiazilei1994@gmail.com
 # email_title: Email (Email title override)
@@ -20,7 +20,7 @@ darkmode: never
 
 # Social links
 # twitter_username: jekyllrb
-# github_username:  jekyll
+# github_username:  https://xzlpinbo.github.io/
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
@@ -52,29 +52,14 @@ additional_links:
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/profile1.jpg
 about_content : | 
-    Graduated as a distinguished international student from Konkuk University's Software Department, specializing in IT solutions.
+    拥有5年经验的全栈开发,专注于Java/Python后端服务和React.js前端服务,熟悉AWS INFRA环境 
 
-    Possess over a decade of residency in South Korea, complemented by permanent residency status, demonstrating long-term commitment and cultural integration.
+    曾为多家韩国大企业及政府部门提供企业级定制服务,参与了从系统设计规划、开发到日程管理的全过程
 
-    Achieved the highest grade in the Korean Language Proficiency Test, certifying advanced communication skills.
+    "Good code is its own best documentation"
 
-    Excel as a Project Manager, recognized for exceptional communication skills within the IT sector.
-
-    Experienced in leading small-scale teams, demonstrating strong leadership and team management skills.
-
-    Possess excellent communication skills, capable of engaging effectively with both technical and non-technical stakeholders.
-
-    Boast five years of comprehensive experience as a Full-Stack Developer, with a focus on Java/Python backend and React.js frontend development within AWS infrastructure.
-
-    Proven track record in performance optimization, handling database management, and resolving slow queries within large-scale projects.
-    
-    Demonstrated expertise in delivering custom solutions for leading corporations and public entities, encompassing system design, development, and project management.
-
-    Skilled in conflict resolution and negotiation, ensuring smooth project progression and team dynamics.
-
-    Adhere to the philosophy that 'Good code is its own best documentation', prioritizing clarity and simplicity in code to ensure accessibility and understandability for all proficiency levels.
-
-    Adept at time management and prioritizing tasks to meet deadlines and deliver high-quality work.
+    优秀的代码应该是清晰易懂的，无需额外注释或解释，即使是初学者亦能理解
+    优秀的代码应该具有良好的结构、命名清晰、逻辑简单明了，使得它不仅对于编写者自己，也易于其他人的阅读和理解
 
 # about_content: | # this will include new lines to allow paragraphs
 #   Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
@@ -91,114 +76,159 @@ content:
     layout: list
     content:
       - layout: left
-        title: BusinessOn Communication Co., Ltd.
-        sub_title: Full Stack Engineer
-        caption: (2019 ~ Now)
+        title: BusinessOn 
+        sub_title: 全栈开发
+        caption: (2019-至今)
         link: https://www.businesson.co.kr/
         quote: >
-         KOSDAQ-listed company, tax invoice solution provider, electronic contract solution company.
-        description: |
-          - Domestic coverage exceeds 90%
-          - The tax system is high-performance and highly reliable.
+         韩上市B2B企业, 电子发票解决方案服务,电子合同解决方案服务
+        description: | # this will include new lines to allow paragraphs
+          - 全韩覆盖率百分之90以上
+          - 税务系统,高并发高可靠
+          - 法律认证电子合同服务
+
+          
 
 
-  - title: Projects
-    layout: list
+          
+  
+  - title: Projects # Title for the section
+    layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        border: weak
-        title: 청호나이스(Chung Ho)
+        border: weak  # Value of `weak` will display a weak border below this item. # Any 
+                      # other value (or no value) means no border will be displayed
+        title: CHUNGHO
         link: https://www.chungho.co.kr/
+        # link_text: Link Text
+        # additional_links:
+        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
+        #     icon: fab fa-github
+        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
         quote: >
-          After purchasing product reservations, electronic contract service solutions (B2B/B2C, SI) are offered
-        description: |
-          - Integration with large internal ERPs
-          - Personal information encryption and document encryption in accordance with the Personal Information Protection Act
-          - Progress on infrastructure, system design, schedule management, and front/back-end development
-          - Integration and construction of monitoring systems
-          - Served as the project leader, coordinating cross-functional teams to ensure timely and within-budget delivery
-          - React.js/Spring-Boot(java 11)/PostgreSQL
+          产品预约购买后,电子签约系统(B2B/B2C,会员数1000万级,年销售5000亿韩元)
+        description: | # this will include new lines to allow paragraphs
+          - 项目开发Leader, Team管理和资源分配
+          - 公司内部ERP联动
+          - 个人信息保护法内部网络独立
+          - 系统搭建,设计,开发,项目管理独立完成
+          - 公司内部自动化报错监控(lamda)
+          - React.js/Spring-Boot(java 11)/PostgreSQL/Docker
 
       - layout: top-middle
-        border: weak 
-        title: LG 앤너지 솔루션(LG Energy Solution, LTD.)
+        border: weak  # Value of `weak` will display a weak border below this item. # Any 
+                      # other value (or no value) means no border will be displayed
+        title: LG新能源
         link: https://www.lgensol.com/zh/index
+        # link_text: Link Text
+        # additional_links:
+        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
+        #     icon: fab fa-github
+        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
         quote: >
-          In-house electronic pledge system (used by 120,000 employees worldwide)
-        description: | 
-          - Integration with the in-house database, Highest-Level security system
-          - Front-end / Back-end development, CI/CD
-          - Construction of logging and automatic monitoring
-          - Daily batch, automatic updates of personnel information, SLOW QUERY tuning, JVM tuning
+          公司内部电子审批/合约/誓约签名系统(全世界12万名员工使用,日PV十万级)
+        description: | # this will include new lines to allow paragraphs
+          - 公司内部ERP联动,1级安保系统
+          - 前后端开发,CI/CD
+          - 内部系统全自动风险监控
+          - 日更新Batch,全自动化更新服务,Slow query 调优,JVM调优
           - React.js/Spring-Boot(java 11)/Oracle
 
-
       - layout: top-middle
-        border: weak 
+        border: weak  # Value of `weak` will display a weak border below this item. # Any 
+                      # other value (or no value) means no border will be displayed
         title: SK Hynix
         link: https://www.skhynix.com/
+        # link_text: Link Text
+        # additional_links:
+        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
+        #     icon: fab fa-github
+        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
         quote: >
-          SK Hynix Security Pledge System
+          半导体公司内部电子合约系统(全世界20万名以上员工使用,日PV十万级)
         description: |
-          - Lead project development manager and project management director
-          - Designed in accordance with the Act on the Protection of National Core Technologies
-          - System construction, design, infrastructure development, and schedule management
-          - Enterprise optimization: Slow query tuning, JVM tuning, and management of WAS/WEB/DB multiplications
-          - Large-scale daily batch processing and multi-threading, integration and technical support with other internal systems
+          - 项目开发Leader, Team管理和资源分配, 与客户公司沟通并维护项目至今
+          - 涉密公司内部数据库联动,最上级信息安全系统
+          - 系统搭建,设计,开发,项目管理,项目维护独立完成
+          - 企业适配Slow query 调优,JVM调优,WAS/WEB/DB多集群服务器调优
+          - 大型Daily Batch构建,30+其他内部系统联动调用,多线程处理
           - React.js/Spring-Boot(java 8),Django 3/Oracle,PostgreSQL/Docker/Windows Server
 
       - layout: top-middle
-        border: weak
-        title: 롯데 랜탈(Lotte-Rental)
+        border: weak  # Value of `weak` will display a weak border below this item. # Any 
+                      # other value (or no value) means no border will be displayed
+        title: Lotte-rental
         link: https://www.lotterental.com/
+        # link_text: Link Text
+        # additional_links:
+        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
+        #     icon: fab fa-github
+        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
         quote: >
-          Rental contract, succession contract (financial system)
+          租车签约/租车过户电子化系统(金融类系统,年销售3万亿韩元)
         description: |
-          - Lead project development manager
-          - Integration with internal ERP systems
-          - System construction, design, infrastructure development, and schedule management
-          - Integration with Korea Financial Telecommunications & Clearings Institute, automatic transfer system integration
-          - Financial institution system, enhanced security
+          - 公司内部ERP联动,内部系统资源调用
+          - 系统搭建,设计,开发,项目管理,项目维护独立完成
+          - 韩国国家金融监理会联动,每月自动划款系统认证联动
+          - 金融类项目标准完成安全和保密工作
           - React.js/Spring-Boot(java 8)/PostgreSQL
 
           
       - layout: top-middle
-        border: weak
-        title: 소상공인진흥공단(Small Enterprise & MArket Service, Korean GOV System)
+        border: weak  # Value of `weak` will display a weak border below this item. # Any 
+                      # other value (or no value) means no border will be displayed
+        title: 韩国小企业市场促进公司
         link: https://www.semas.or.kr/web/main/index.kmdc
+        # link_text: Link Text
+        # additional_links:
+        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
+        #     icon: fab fa-github
+        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
         quote: >
-          Construction of a loan support system for small businesses affected by COVID-19, by government and public institutions
+          韩政府部门网站(全韩企业法人使用,日PV千万级)
         description: |
-          - Handling large traffic volumes, high availability, high throughput, and minimal latency
-          - Tuning for a system supporting millions of concurrent users
-          - Optimized Slow query tuning, JVM tuning, and the construction and management of WAS/WEB/DB multiplications
-          - Integration of various systems and APIs including government agencies and identity verification
+          - 高流量高并发高可用系统
+          - 千万级压测和实时监控
+          - 毫秒级适配 Slow query 调优,JVM 调优, WAS/WEB/DB多集群服务器调优
+          - 贷款类项目,各项数据审核自动化,个人认证自动化等政府机关API调用适配
           - React.js/Spring-Boot(java 8),Django 3/Oracle,PostgreSQL
 
       - layout: top-middle
-        border: weak
-        title: SaaS Python Django Project Renewal with Java SpringBoot
+        border: weak  # Value of `weak` will display a weak border below this item. # Any 
+                      # other value (or no value) means no border will be displayed
+        title: SaaS平台 Python Django 项目 JAVA SpringBoot 迁移重构
         link: '' 
+        # link_text: Link Text
+        # additional_links:
+        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
+        #     icon: fab fa-github
+        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
         quote: >
-          Renewed the legacy Django backend code with Java, altered the database construction, and organized tables
+          公司服务平台的历史代码重构,从 python 迁移至 Java
         description: |
-          - Complete system renewal including OpenAPI and SDK
-          - Redesign of database construction
-          - Writing TEST CASES
-          - Construction of CI/CD
+          - 初创期Django2 代码重构
+          - 数据库不合理架构重构
+          - TEST CASE 部署前自动测试单元构建
+          - CI/CD 自动化部署和自动监控
           - Spring-Boot(java 8),Django 2/PostgreSQL
 
       - layout: top-middle
-        border: weak 
-        title: Internal Back-Office System
+        border: weak  # Value of `weak` will display a weak border below this item. # Any 
+                      # other value (or no value) means no border will be displayed
+        title: 公司内部 Back-Office 系统(职员用管理系统)
         link: ''
+        # link_text: Link Text
+        # additional_links:
+        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
+        #     icon: fab fa-github
+        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
         quote: >
-          Internal BO system automatically generates monthly statistical reports including financial information
+          内部 BO 系统,管理所有服务,每月数据自动计算等
         description: |
-          - Passed IOS27001 audit
-          - Internal network infrastructure
-          - Integration of in-house notifications, emails, and Alert in Kakaotalk
-          - Automated CI/CD
+          - 为通过 IOS27001认证构建此管理系统
+          - 公司内部用,保密和IP监控系统
+          - 内部网络专用架构
+          - CI/CD 自动化部署和自动监控
           - React.js/Django 3/PostgreSQL
 
           
@@ -208,16 +238,16 @@ content:
     layout: list
     content:
       - layout: top-left
-        title: Konkyk Univ.
+        title: 建国大学(Konkuk)
         sub_title: Software Engineering
-        caption: 2017-2020
+        caption: 2016-2020
         # quote: >
         #   Short institution or course description (optional)
         description: |
-          - Department of Software, College of Computer Science, Konkuk University
-          - Graduation project and thesis award
-          - Awarded scholarship for outstanding international students
-          - Awarded scholarship for excellent academic performance in Korean
+          - 建国大学计算机科学系软件工学科
+          - 毕业设计,毕业论文获奖
+          - 优秀外国人学生奖学金
+          - 优秀韩语奖学金
   
   
   - title: Skills
@@ -234,7 +264,7 @@ content:
           - React.js
           - Next.js
           - Nest.js
-          - Node, Npm, Webpack, Vite
+          - Node, Npm, Webpack
 
       - layout: top-left
         title: Back-End
