--- a/_config.yml
+++ b/_config.yml
@@ -54,12 +54,14 @@ about_profile_image: images/profile1.jpg
 about_content : | 
     拥有5年经验的全栈开发,专注于Java/Python后端服务和React.js前端服务,熟悉AWS INFRA环境 
 
-    曾为多家韩国大企业及政府部门提供企业级定制服务,参与了从系统设计规划、开发到日程管理的全过程
+    带领团队,为多家韩国大企业及政府部门提供企业级定制服务,参与了从系统设计规划、开发到日程管理的全过程
+
+    作为Team Leader, 带领新人的Code Review, 资源分配以及对上级的沟通和报告
 
     "Good code is its own best documentation"
 
-    优秀的代码应该是清晰易懂的，无需额外注释或解释，即使是初学者亦能理解
-    优秀的代码应该具有良好的结构、命名清晰、逻辑简单明了，使得它不仅对于编写者自己，也易于其他人的阅读和理解
+    优秀的代码应该是清晰易懂的,无需额外注释或解释,即使是初学者亦能理解
+    优秀的代码应该具有良好的结构、命名清晰、逻辑简单明了,使得它不仅对于编写者自己,也易于其他人的阅读和理解
 
 # about_content: | # this will include new lines to allow paragraphs
 #   Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
