--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,25 @@
-# Resume Configuration
-version: 2.2
+# _config.yml
 
-# Personal Information
+theme: modern-resume-theme
+remote_theme: sproogen/modern-resume-theme@v2.0.10
+
+# Site
+repository: xzlpinbo/xzlpinbo.github.io
+url: https://xzlpinbo.github.io/
+favicon: assets/images/favicon.ico
+
+# Content configuration
+version: 2
+
+# Personal info
 name: 夏子雷
 title: Full Stack Engineer | Tech Lead
 email: xiazilei1994@gmail.com
 website: https://xzlpinbo.github.io/
 darkmode: never
 
-# Profile Section
-about_profile_image: images/profile1.jpg
+# About
+about_profile_image: assets/images/profile1.jpg
 about_content: |
   全栈技术专家，5年企业级系统开发经验，专注于构建高可用、高并发的数字化解决方案。擅长：
   
@@ -24,126 +34,114 @@ about_content: |
   - 注重系统监控和自动化运维
   - 坚持技术方案与业务需求的高度契合
 
-content:
-
-  - title: 工作经历
-    layout: list
+# Sections
+sections:
+  - name: 工作经历
     content:
-      - layout: left
-        title: BusinessOn 
-        sub_title: 全栈开发工程师
-        caption: 2019-至今
-        link: https://www.businesson.co.kr/
-        description: |
+      - company: BusinessOn
+        role: 全栈开发工程师
+        period: 2019-至今
+        url: https://www.businesson.co.kr/
+        details: |
           • 主导韩国市场占有率90%的电子发票系统核心模块开发
           • 设计实现高并发税务处理架构，日处理交易量超过50万笔
           • 作为技术骨干参与电子合同法律认证流程开发
 
-  - title: 核心项目经验
-    layout: list
+  - name: 核心项目经验
     content:
-      - layout: top-middle
-        border: weak
-        title: CHUNGHO电子签约系统
-        link: https://www.chungho.co.kr/
-        description: |
+      - title: CHUNGHO电子签约系统
+        url: https://www.chungho.co.kr/
+        tech: React.js + Spring Boot(Java11) + PostgreSQL + Docker
+        details: |
           • 作为项目负责人带领5人团队，完成B2B/B2C电子签约平台开发，服务1000万+会员
           • 关键技术实现：
             - 基于AWS Lambda构建实时错误监控系统，问题响应时间缩短80%
             - 设计ERP系统深度集成方案，数据同步延迟<500ms
-          • 技术栈：React.js + Spring Boot(Java11) + PostgreSQL + Docker
 
-      - layout: top-middle
-        border: weak
-        title: LG新能源全球综合平台
-        link: https://www.lgensol.com/zh/index
-        description: |
+      - title: LG新能源全球综合平台
+        url: https://www.lgensol.com/zh/index
+        tech: React + Spring Boot(Java11) + Oracle RAC
+        details: |
           • 开发覆盖20+国12万员工的电子审批系统，日处理请求10万+
           • 性能优化成果：
             - JVM调优后GC暂停时间从1.2s降至200ms
             - 复杂SQL查询优化，执行时间从8s提升至0.5s
-          • 技术栈：React + Spring Boot(Java11) + Oracle RAC
 
-      - layout: top-middle
-        border: weak
-        title: SK海力士安全合约系统
-        link: https://www.skhynix.com/
-        description: |
+      - title: SK海力士安全合约系统
+        url: https://www.skhynix.com/
+        tech: Spring Boot(Java8)/Django3 + Oracle + Windows Server
+        details: |
           • 领导开发涉密电子合约系统，通过ISO27001安全认证
           • 系统特性：
             - 多集群部署（WAS/WEB/DB），故障自动切换
             - 30+内部系统API集成，日均调用量200万+
-          • 技术栈：Spring Boot(Java8)/Django3 + Oracle + Windows Server
 
-      - layout: top-middle
-        border: weak
-        title: Lotte租车金融系统
-        link: https://www.lotterental.com/
-        description: |
+      - title: Lotte租车金融系统
+        url: https://www.lotterental.com/
+        tech: React + Spring Boot(Java8) + PostgreSQL
+        details: |
           • 开发年交易额3万亿韩元的金融级租约系统
           • 合规性保障：
             - 实现韩国金融监管机构API自动对接
             - 设计数据加密方案满足金融标准
-          • 技术栈：React + Spring Boot(Java8) + PostgreSQL
 
-      - layout: top-middle
-        border: weak
-        title: 韩国中小企业政府平台
-        link: https://www.semas.or.kr/web/main/index.kmdc
-        description: |
+      - title: 韩国中小企业政府平台
+        url: https://www.semas.or.kr/web/main/index.kmdc
+        tech: Spring Boot(Java8)/Django3 + Oracle
+        details: |
           • 开发日PV千万级的政府服务门户
           • 性能突破：
             - 通过负载测试：5000并发用户响应时间<1s
             - 数据库查询优化，慢查询数量减少95%
-          • 技术栈：Spring Boot(Java8)/Django3 + Oracle
 
-      - layout: top-middle
-        border: weak
-        title: SaaS平台迁移重构
-        description: |
+      - title: SaaS平台迁移重构
+        tech: Spring Boot(Java8) + Django2 + PostgreSQL
+        details: |
           • 领导Python(Django2)到Java(Spring Boot)的系统重构
           • 改进点：
             - 重构数据库架构，查询效率提升60%
             - 建立自动化测试体系，测试覆盖率从30%提升至85%
-          • 技术栈：Spring Boot(Java8) + Django2 + PostgreSQL
 
-      - layout: top-middle
-        border: weak
-        title: 企业后台管理系统
-        description: |
+      - title: 企业后台管理系统
+        tech: React + Django3 + PostgreSQL
+        details: |
           • 开发通过ISO27001认证的内部管理系统
           • 安全特性：
             - 实现细粒度权限控制(RBAC模型)
             - 构建操作日志审计系统
-          • 技术栈：React + Django3 + PostgreSQL
 
-  - title: 教育背景
-    layout: list
+  - name: 教育背景
     content:
-      - layout: top-left
-        title: 建国大学
-        sub_title: 计算机科学系软件工程专业
-        caption: 2016-2020
-        description: |
+      - institution: 建国大学
+        degree: 计算机科学系软件工程专业
+        period: 2016-2020
+        details: |
           • 获奖：
             - 校级优秀毕业设计奖（TOP 1%）
             - 国际学生学术成就奖学金（连续3年）
 
-  - title: 技术能力
-    layout: list
+  - name: 技术能力
     content:
-      - layout: top-left
-        title: 核心技术栈
-        description: |
+      - category: 核心技术栈
+        skills: |
           • 前端：React生态（Hooks/Redux）、TypeScript
           • 后端：Spring Boot(8/11)、Django3、RESTful API设计
           • 数据库：Oracle、PostgreSQL、JPA/Hibernate
-      - layout: top-left
-        title: 基础设施
-        description: |
+      - category: 基础设施
+        skills: |
           • 云服务：AWS(EC2/RDS/S3)、Docker Compose
           • 运维：Nginx配置、Linux服务器管理
           • 工具链：Git/Jira/Notion
 
 # Footer
 footer_show_references: true
+
+# Build settings
+plugins:
+  - jekyll-seo-tag
+  - jekyll-feed
+
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - vendor
