--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,30 @@
+Okay, I've reviewed your resume content and will provide a polished version.
+The main changes involve:
+
+Refining wording for impact and professionalism: Using stronger action verbs and more descriptive professional language (e.g., "全生命周期管理", "主导", "深度参与").
+
+Improving clarity and flow: Especially in the "About Me" and project descriptions.
+
+Standardizing formatting: Such as how "技术栈" (Tech Stack) is presented.
+
+Slight structural adjustments for readability: For instance, modifying the "Experience" section to better frame your role at BusinessOn, leading into the "Projects" which seem to be client engagements through that company.
+
+Correcting minor details: Like github_username.
+
+Ensuring consistency in language (Chinese).
+
+Here's the revised YAML:
+
 # Site
-repository: Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
-# favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
+repository: xzlpinbo/your-resume-repo-name # eg. sproogen/modern-resume-theme (Replace with your actual repo if hosting on GitHub)
+# favicon: images/favicon.ico # (optional)
 
 # Content configuration version
 version: 2
 
 # Personal info
 name: 夏子雷
-title: Full Stack Engineer
+title: 全栈工程师 (Full Stack Engineer)
 email: xiazilei1994@gmail.com
 # email_title: Email (Email title override)
 # phone: '82'
@@ -20,7 +37,7 @@ darkmode: never
 
 # Social links
 # twitter_username: jekyllrb
-# github_username:  https://xzlpinbo.github.io/
+github_username: xzlpinbo # Corrected: should be username, not URL
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
@@ -34,283 +51,196 @@ darkmode: never
 # googlescholar_username: D847cGsAAAAJ
 
 # Additional icon links
-additional_links:
+# additional_links:
 # - title: Link name
 #   icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 #   url: Link url (eg. https://google.com)
-# - title: another link
-#   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
-#   url: Link url (eg. https://google.com)
 
 # Google Analytics and Tag Manager
-# Using more than one of these may cause issues with reporting
 # gtm: "GTM-0000000"
 # gtag: "UA-00000000-0"
 # google_analytics: "UA-00000000-0"
 
 # About Section
-# about_title: About Me (Use this to override about section title)
+# about_title: 关于我 (About Me)
 about_profile_image: images/profile1.jpg
-about_content : | 
-    拥有5年经验的全栈开发,专注于Java/Python后端服务和React.js前端服务,熟悉AWS INFRA环境 
-
-    带领团队,为多家韩国大企业及政府部门提供企业级定制服务,参与了从系统设计规划、开发到日程管理的全过程
-
-    作为Team Leader, 带领新人的Code Review, 资源分配以及对上级的沟通和报告
-
-    "Good code is its own best documentation"
-
-    优秀的代码应该是清晰易懂的,无需额外注释或解释,即使是初学者亦能理解
-    优秀的代码应该具有良好的结构、命名清晰、逻辑简单明了,使得它不仅对于编写者自己,也易于其他人的阅读和理解
-
-# about_content: | # this will include new lines to allow paragraphs
-#   Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
-
-#   You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
-#     - Lists
-#     - Tables
-#     - <a href="google.com">Links</a>
-#     - Images ![alt text](/images/landscape-trees.jpg "Trees")
+about_content: |
+  拥有5年全栈开发经验，精通Java/Python后端及React.js前端技术，熟悉AWS云平台基础设施。
+  曾带领团队为多家韩国大型企业及政府部门提供企业级定制解决方案，深度参与从系统设计、规划、开发到项目交付的全生命周期管理。
+  担任团队负责人期间，主导Code Review、任务分配、新人指导，并负责与上级进行项目沟通与汇报。
+  坚信“优秀的代码本身即是最佳文档”，致力于编写结构清晰、逻辑简明、易于维护的高质量代码。
 
 content:
-
-  - title: Experience
+  - title: 工作经历 (Work Experience)
     layout: list
     content:
       - layout: left
-        title: BusinessOn 
-        sub_title: 全栈开发
-        caption: (2019-至今)
+        title: BusinessOn
+        sub_title: 全栈工程师 / 技术主管 (Full Stack Engineer / Tech Lead)
+        caption: 2019年 - 至今
         link: https://www.businesson.co.kr/
-        quote: >
-         韩上市B2B企业, 电子发票解决方案服务,电子合同解决方案服务
-        description: | # this will include new lines to allow paragraphs
-          - 全韩覆盖率百分之90以上
-          - 税务系统,高并发高可靠
-          - 法律认证电子合同服务
+        # quote: > # Company description moved to be implicit via projects
+        description: |
+          在韩国上市B2B解决方案提供商BusinessOn任职，专注于电子化企业服务。
+          初期担任全栈工程师，负责核心产品（如电子税务、电子合同系统）的开发与维护。
+          后晋升为技术主管，领导团队为多个大型企业客户（如LG、SK Hynix）及政府机构交付定制化项目。
+          主要职责包括：
+          - 领导项目团队，进行需求分析、系统架构设计、核心模块开发。
+          - 管理项目进度，分配开发资源，指导团队成员，执行Code Review。
+          - 负责技术选型、性能优化（数据库、JVM、服务器集群）及CI/CD流程建设。
+          - 与客户及内部多部门沟通协作，确保项目顺利交付与系统稳定运行。
 
-          
-
-
-          
-  
-  - title: Projects # Title for the section
+  - title: 项目经历 (Projects) # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        border: weak  # Value of `weak` will display a weak border below this item. # Any 
-                      # other value (or no value) means no border will be displayed
-        title: CHUNGHO
+        border: weak
+        title: CHUNGHO 电子签约系统
         link: https://www.chungho.co.kr/
-        # link_text: Link Text
-        # additional_links:
-        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
-        #     icon: fab fa-github
-        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
         quote: >
-          产品预约购买后,电子签约系统(B2B/B2C,会员数1000万级,年销售5000亿韩元)
-        description: | # this will include new lines to allow paragraphs
-          - 项目开发Leader, Team管理和资源分配
-          - 公司内部ERP联动
-          - 个人信息保护法内部网络独立
-          - 系统搭建,设计,开发,项目管理独立完成
-          - 公司内部自动化报错监控(lamda)
-          - React.js/Spring-Boot(java 11)/PostgreSQL/Docker
+          为CHUNGHO集团（会员数1000万级，年销售额5000亿韩元）构建B2B/B2C产品预约购买及电子签约平台。
+        description: |
+          - 担任项目开发Leader，负责团队管理、任务分配与资源协调。
+          - 实现与公司内部ERP系统的数据联动与业务集成。
+          - 设计并实施符合个人信息保护法的内部隔离网络架构。
+          - 独立完成系统架构设计、核心模块开发及项目管理。
+          - 构建基于AWS Lambda的自动化错误监控与告警系统。
+          技术栈: React.js, Spring Boot (Java 11), PostgreSQL, Docker, AWS Lambda
 
       - layout: top-middle
-        border: weak  # Value of `weak` will display a weak border below this item. # Any 
-                      # other value (or no value) means no border will be displayed
-        title: LG新能源
+        border: weak
+        title: LG新能源 内部审批及合约系统
         link: https://www.lgensol.com/zh/index
-        # link_text: Link Text
-        # additional_links:
-        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
-        #     icon: fab fa-github
-        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
         quote: >
-          公司内部电子审批/合约/誓约签名系统(全世界12万名员工使用,日PV十万级)
-        description: | # this will include new lines to allow paragraphs
-          - 公司内部ERP联动,1级安保系统
-          - 前后端开发,CI/CD
-          - 内部系统全自动风险监控
-          - 日更新Batch,全自动化更新服务,Slow query 调优,JVM调优
-          - React.js/Spring-Boot(java 11)/Oracle
+          为LG新能源（全球12万名员工，日PV十万级）开发内部电子审批、合约及电子签名系统。
+        description: |
+          - 集成公司内部ERP系统，确保系统符合一级信息安全标准。
+          - 负责系统全栈开发，并搭建CI/CD自动化部署流水线。
+          - 开发内部系统全自动风险监控模块，保障系统稳定性。
+          - 设计并实现每日批量更新服务；进行Slow Query及JVM性能调优。
+          技术栈: React.js, Spring Boot (Java 11), Oracle, CI/CD
 
       - layout: top-middle
-        border: weak  # Value of `weak` will display a weak border below this item. # Any 
-                      # other value (or no value) means no border will be displayed
-        title: SK Hynix
+        border: weak
+        title: SK Hynix 内部电子合约系统
         link: https://www.skhynix.com/
-        # link_text: Link Text
-        # additional_links:
-        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
-        #     icon: fab fa-github
-        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
         quote: >
-          半导体公司内部电子合约系统(全世界20万名以上员工使用,日PV十万级)
+          为SK Hynix（全球20万名员工，日PV十万级）定制开发内部电子合约系统。
         description: |
-          - 项目开发Leader, Team管理和资源分配, 与客户公司沟通并维护项目至今
-          - 涉密公司内部数据库联动,最上级信息安全系统
-          - 系统搭建,设计,开发,项目管理,项目维护独立完成
-          - 企业适配Slow query 调优,JVM调优,WAS/WEB/DB多集群服务器调优
-          - 大型Daily Batch构建,30+其他内部系统联动调用,多线程处理
-          - React.js/Spring-Boot(java 8),Django 3/Oracle,PostgreSQL/Docker/Windows Server
+          - 作为项目开发Leader，主导团队管理与资源分配；负责与客户持续沟通并提供项目维护支持。
+          - 实现与涉密内部数据库的安全联动，确保系统符合最高级别信息安全要求。
+          - 独立完成系统架构设计、核心功能开发、项目管理及后期维护。
+          - 针对企业级应用进行Slow Query、JVM及WAS/WEB/DB集群性能调优。
+          - 构建大型每日批量处理任务，集成30+内部系统接口，并应用多线程技术提升处理效率。
+          技术栈: React.js, Spring Boot (Java 8), Django 3, Oracle, PostgreSQL, Docker, Windows Server
 
       - layout: top-middle
-        border: weak  # Value of `weak` will display a weak border below this item. # Any 
-                      # other value (or no value) means no border will be displayed
-        title: Lotte-rental
+        border: weak
+        title: Lotte-rental 电子化签约系统
         link: https://www.lotterental.com/
-        # link_text: Link Text
-        # additional_links:
-        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
-        #     icon: fab fa-github
-        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
         quote: >
-          租车签约/租车过户电子化系统(金融类系统,年销售3万亿韩元)
+          为Lotte-rental（年销售额3万亿韩元）开发租车签约及过户电子化金融系统。
         description: |
-          - 公司内部ERP联动,内部系统资源调用
-          - 系统搭建,设计,开发,项目管理,项目维护独立完成
-          - 韩国国家金融监理会联动,每月自动划款系统认证联动
-          - 金融类项目标准完成安全和保密工作
-          - React.js/Spring-Boot(java 8)/PostgreSQL
+          - 集成公司内部ERP系统，并实现内部系统资源的高效调用。
+          - 独立负责系统设计、开发、项目管理及后续维护工作。
+          - 实现与韩国国家金融监管机构系统的联动，支持每月自动扣款及认证功能。
+          - 严格遵循金融项目标准，确保系统数据安全与业务保密。
+          技术栈: React.js, Spring Boot (Java 8), PostgreSQL
 
-          
       - layout: top-middle
-        border: weak  # Value of `weak` will display a weak border below this item. # Any 
-                      # other value (or no value) means no border will be displayed
-        title: 韩国小企业市场促进公司
+        border: weak
+        title: 韩国小企业市场促进公司 政府服务网站
         link: https://www.semas.or.kr/web/main/index.kmdc
-        # link_text: Link Text
-        # additional_links:
-        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
-        #     icon: fab fa-github
-        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
         quote: >
-          韩政府部门网站(全韩企业法人使用,日PV千万级)
+          为韩国政府部门开发面向全国企业法人的服务网站（日PV千万级）。
         description: |
-          - 高流量高并发高可用系统
-          - 千万级压测和实时监控
-          - 毫秒级适配 Slow query 调优,JVM 调优, WAS/WEB/DB多集群服务器调优
-          - 贷款类项目,各项数据审核自动化,个人认证自动化等政府机关API调用适配
-          - React.js/Spring-Boot(java 8),Django 3/Oracle,PostgreSQL
+          - 负责设计和开发支持千万级日PV的高流量、高并发、高可用系统。
+          - 执行千万级并发压力测试，并部署实时性能监控系统。
+          - 进行毫秒级Slow Query优化、JVM调优及WAS/WEB/DB集群性能调优。
+          - 为贷款类业务实现数据自动审核、个人认证自动化，并适配多个政府机关API接口。
+          技术栈: React.js, Spring Boot (Java 8), Django 3, Oracle, PostgreSQL
 
       - layout: top-middle
-        border: weak  # Value of `weak` will display a weak border below this item. # Any 
-                      # other value (or no value) means no border will be displayed
-        title: SaaS平台 Python Django 项目 JAVA SpringBoot 迁移重构
-        link: '' 
-        # link_text: Link Text
-        # additional_links:
-        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
-        #     icon: fab fa-github
-        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+        border: weak
+        title: SaaS平台 Python Django至Java Spring Boot迁移重构
+        # link: '' # Internal project
         quote: >
-          公司服务平台的历史代码重构,从 python 迁移至 Java
+          主导公司核心SaaS平台的技术栈迁移：从Python Django重构至Java Spring Boot，提升系统性能与可维护性。
         description: |
-          - 初创期Django2 代码重构
-          - 数据库不合理架构重构
-          - TEST CASE 部署前自动测试单元构建
-          - CI/CD 自动化部署和自动监控
-          - Spring-Boot(java 8),Django 2/PostgreSQL
+          - 对早期Django 2代码进行全面梳理与现代化重构。
+          - 优化并重构了原有的数据库设计，提升数据一致性与查询效率。
+          - 构建全面的单元测试与集成测试用例，实现部署前自动化测试。
+          - 建立CI/CD流水线，实现自动化部署与实时系统监控。
+          技术栈: Spring Boot (Java 8), Python Django 2, PostgreSQL, CI/CD
 
       - layout: top-middle
-        border: weak  # Value of `weak` will display a weak border below this item. # Any 
-                      # other value (or no value) means no border will be displayed
-        title: 公司内部 Back-Office 系统(职员用管理系统)
-        link: ''
-        # link_text: Link Text
-        # additional_links:
-        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
-        #     icon: fab fa-github
-        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+        # border: weak # No border for the last item in a list usually looks cleaner
+        title: 公司内部Back-Office管理系统开发
+        # link: '' # Internal project
         quote: >
-          内部 BO 系统,管理所有服务,每月数据自动计算等
+          为提升内部运营效率，开发公司内部Back-Office系统，用于统一管理各项服务及自动化月度数据处理。
         description: |
-          - 为通过 IOS27001认证构建此管理系统
-          - 公司内部用,保密和IP监控系统
-          - 内部网络专用架构
-          - CI/CD 自动化部署和自动监控
-          - React.js/Django 3/PostgreSQL
+          - 系统设计满足ISO27001信息安全管理体系认证要求。
+          - 部署于公司内部网络，集成数据保密与IP访问监控功能。
+          - 采用内部网络专用架构，确保系统安全性与隔离性。
+          - 实施CI/CD流程，支持自动化部署与系统监控。
+          技术栈: React.js, Django 3, PostgreSQL, CI/CD
 
-          
- 
-
-  - title: Education
+  - title: 教育背景 (Education)
     layout: list
     content:
       - layout: top-left
-        title: 建国大学(Konkuk univ)
-        sub_title: Software Engineering
-        caption: 2016-2020
-        # quote: >
-        #   Short institution or course description (optional)
+        title: 建国大学 (Konkuk University)
+        sub_title: 软件工程 (Software Engineering)
+        caption: 2016年 - 2020年
         description: |
-          - 建国大学计算机科学系软件工学科
-          - 毕业设计,毕业论文获奖
-          - 优秀外国人学生奖学金
-          - 优秀韩语奖学金
-  
-  
-  - title: Skills
-    layout: list
+          - 主修计算机科学与技术，软件工程方向。
+          - 毕业设计及毕业论文荣获校级奖项。
+          - 多次荣获优秀外国留学生奖学金及韩语能力奖学金。
 
+  - title: 技术技能 (Skills)
+    layout: list # Changed to list to allow multiple skill categories
     content:
-      - layout: top-left
-        title: Front-End
-        # sub_title: Software Engineering
-        # caption: 2016-2020
-        # quote: >
-        #   Short institution or course description (optional)
+      - layout: top-left # Using top-left for skills as in original, good for category + list
+        title: 前端 (Front-End)
         description: |
-          - React.js
-          - Next.js
-          - Nest.js
-          - Node, Npm, Webpack
+          - **JavaScript/TypeScript**: React.js, Next.js, Redux, Zustand
+          - **UI/UX**: HTML5, CSS3, Sass/SCSS, Styled-Components, Material-UI
+          - **构建工具**: Node.js, Npm/Yarn, Webpack, Babel
 
       - layout: top-left
-        title: Back-End
-        # sub_title: Software Engineering
-        # caption: 2016-2020
-        # quote: >
-        #   Short institution or course description (optional)
+        title: 后端 (Back-End)
         description: |
-          - Java, Spring-boot, Spring MVC, Spring Batch, Spring Security, Spring Data JPA, Spring Cloud AWS
-          - JPA, Querydsl, Hibernate, JPQL
-          - Python Django
-          - Gradle, Maven
-          - Docker, Docker-Compose
+          - **Java**: Spring Boot, Spring MVC, Spring Batch, Spring Security, Spring Data JPA, Spring Cloud AWS
+          - **ORM/Data**: JPA, Hibernate, Querydsl, JPQL, MyBatis
+          - **Python**: Django, Django REST framework
+          - **构建/依赖**: Gradle, Maven
 
       - layout: top-left
-        title: DevOps
-        # sub_title: Software Engineering
-        # caption: 2016-2020
-        # quote: >
-        #   Short institution or course description (optional)
+        title: 数据库 & DevOps (Databases & DevOps)
         description: |
-          - Oracle, PostgreSQL
-          - AWS RDS, S3, EC2
-          - Nginx, Tomcat
-          - Linux (centOS,ubuntu,Red-hat)
+          - **数据库**: Oracle, PostgreSQL, MySQL, Redis
+          - **云服务 (AWS)**: EC2, S3, RDS, Lambda, CloudWatch, IAM
+          - **容器化**: Docker, Docker-Compose, Kubernetes (基础)
+          - **CI/CD**: Jenkins, GitLab CI, GitHub Actions
+          - **服务器/中间件**: Nginx, Apache Tomcat
+          - **操作系统**: Linux (CentOS, Ubuntu, Red Hat)
 
       - layout: top-left
-        title: ETC
-        # sub_title: Software Engineering
-        # caption: 2016-2020
-        # quote: >
-        #   Short institution or course description (optional)
+        title: 其他工具 & 方法论 (Others)
         description: |
-          - Teams, Slack, Notion, Jira
-          - git
-          - VS Code, IntelliJ IDEA
+          - **版本控制**: Git, Gitflow
+          - **协作工具**: Jira, Confluence, Slack, Notion, Teams
+          - **IDE**: IntelliJ IDEA, VS Code
+          - **敏捷开发**: Scrum, Kanban
 
 # Footer
 footer_show_references: true
-# references_title: References on request (Override references text)
+# references_title: References available upon request.
 
 # Build settings
-# theme: modern-resume-theme (Use this is you are hosting your resume yourself)
-# remote_theme: sproogen/modern-resume-theme (Use this if you are hosting your resume on GitHub)
+# theme: modern-resume-theme # (Use this if you are hosting your resume yourself)
+remote_theme: sproogen/modern-resume-theme # (Use this if you are hosting your resume on GitHub)
 
 sass:
   sass_dir: _sass
